# StrategyPattern

./: CMakeLists.txt  main.cpp
Delivery/: CMakeLists.txt  delivery.hpp
Delivery/AutoDelivery/: CMakeLists.txt  auto_delivery.cpp  auto_delivery.hpp
Delivery/BikeDelivery/: CMakeLists.txt  bike_delivery.cpp  bike_delivery.hpp
Delivery/DroneDelivery/: CMakeLists.txt  drone_delivery.cpp  drone_delivery.hpp
OrderSystem/: CMakeLists.txt  order_system.cpp  order_system.hpp
